--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: gather_here
-description: "A new Flutter project."
+description: "여기로 모여라"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  go_router: ^7.1.0
+  flutter_riverpod: ^2.5.1
+  dio: ^5.5.0+1
+  flutter_secure_storage: ^5.0.2
+  retrofit: ^4.2.0
+  logger: any  #for logging purpose
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +53,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  retrofit_generator: ^7.0.0
+  build_runner: ^2.4.11
+  json_serializable: ^6.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,6 +67,24 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: asset/fonts/Pretendard-Black.otf
+          weight: 900
+        - asset: asset/fonts/Pretendard-Bold.otf
+          weight: 700
+        - asset: asset/fonts/Pretendard-SemiBold.otf
+          weight: 600
+        - asset: asset/fonts/Pretendard-Medium.otf
+          weight: 500
+        - asset: asset/fonts/Pretendard-Regular.otf
+          weight: 400
+        - asset: asset/fonts/Pretendard-Light.otf
+          weight: 300
+        - asset: asset/fonts/Pretendard-Thin.otf
+          weight: 100
 
   # To add assets to your application, add an assets section, like this:
   # assets:
