Feature/my page (#20)
* Feature: 마이 페이지 작업 중 백업

* Feature: 마이 페이지 구현/ Todo: 비밀번호 변경 시 현재 비밀번호를 입력했는지 확인하는 작업 필요

* refactor: 피드백 반영

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>프로필 사진 변경을 위한 카메라 접근 권한이 필요해요.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>프로필 사진 변경을 위한 갤러리 접근 권한이 필요해요.</string>
 </dict>
 </plist>
