[D-0] Home Screen 구현 (#21)
* add: GoogleMaps 추가

* add: easy_debounce 라이브러리 추가

* feat: 키워드 검색 model, repo 구현

* feat: home_provider 검색한 위치 가져오기 구현

* feat: geolocator 추가 및 검색결과 화면에 뿌려주기 구현

* feat: room repo, 방 참여 request, response model 구현

* feat: marker tap했을때, BottomSheet에 정보 표시되도록 구현

* feat: room_create api 구현 및 로직적용

* chore: 모델에 주석추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:label="gather_here"
@@ -32,6 +35,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD7sFeLBjCw1KSxTISgD-uVYGTIKYh_3-w" />
+
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
