--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>실시간 위치정보 제공을 위해 위치정보가 필요합니다</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>실시간 위치정보 제공을 위해 위치정보가 필요합니다</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>실시간 위치정보 제공을 위해 위치정보가 필요합니다</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -24,6 +32,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,13 +55,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 	<key>NSCameraUsageDescription</key>
-    <string>프로필 사진 변경을 위한 카메라 접근 권한이 필요해요.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>프로필 사진 변경을 위한 갤러리 접근 권한이 필요해요.</string>
+  <string>프로필 사진 변경을 위한 카메라 접근 권한이 필요해요.</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>프로필 사진 변경을 위한 갤러리 접근 권한이 필요해요.</string>
 </dict>
 </plist>
