--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   geolocator: ^13.0.1
   json_annotation: ^4.9.0
   image_picker: ^0.8.7+4
-  web_socket_client: ^0.1.4
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
