--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,14 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>지도에 실시간 위치를 표기하기 위해 위치권한이 필요해요.</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>지도에 실시간 위치를 표기하기 위해 위치권한이 필요해요.</string>
-    <key>NSCameraUsageDescription</key>
-    <string>프로필 사진 변경을 위한 카메라 접근 권한이 필요해요.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>프로필 사진 변경을 위한 갤러리 접근 권한이 필요해요.</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -32,6 +28,16 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>프로필 사진 변경을 위한 카메라 접근 권한이 필요해요.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>지도에 실시간 위치를 표기하기 위해 위치권한이 필요해요.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>지도에 실시간 위치를 표기하기 위해 위치권한이 필요해요.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>프로필 사진 변경을 위한 갤러리 접근 권한이 필요해요.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -39,19 +45,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
