--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   json_annotation: ^4.9.0
   image_picker: ^0.8.7+4
   web_socket_channel: ^3.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
