--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   json_annotation: ^4.9.0
   image_picker: ^0.8.7+4
   web_socket_channel: ^3.0.1
-  intl: ^0.18.0
+  intl: ^0.19.0
+  flutter_localization: ^0.2.2
 
 dev_dependencies:
   flutter_test:
