--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   web_socket_channel: ^3.0.1
   intl: ^0.19.0
   flutter_localization: ^0.2.2
+  flutter_cache_manager: ^3.4.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
