--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   image_picker: ^0.8.7+4
   web_socket_channel: ^3.0.1
   intl: ^0.18.0
+  flutter_background_service: ^5.0.10
+  flutter_local_notifications: ^17.2.3
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
