--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   json_annotation: ^4.9.0
   image_picker: ^0.8.7+4
   web_socket_channel: ^3.0.1
-  intl: ^0.18.0
+  intl: ^0.19.0
+  flutter_localization: ^0.2.2
+  flutter_cache_manager: ^3.4.1
+  http: ^1.2.2
   flutter_background_service: ^5.0.10
   flutter_local_notifications: ^17.2.3
   permission_handler: ^11.3.0
