--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_background_service: ^5.0.10
   flutter_local_notifications: ^17.2.3
   permission_handler: ^11.3.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
