--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   permission_handler: ^11.3.0
   url_launcher: ^6.3.1
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
