--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   permission_handler: ^11.3.0
   url_launcher: ^6.3.1
   app_settings: ^5.1.1
+  image: ^4.3.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
