--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   app_settings: ^5.1.1
   image: ^4.3.0
   cached_network_image: ^3.2.3
+  hooks_riverpod: ^2.6.0
 
 dev_dependencies:
   flutter_test:
